--- a/test/index.html
+++ b/test/index.html
@@ -4,67 +4,89 @@
       <meta charset="utf-8">
       <title>个人简历</title>
       <link rel="stylesheet" href="./a.css">
+      <script src="//at.alicdn.com/t/font_1182267_ew7rl871vnm.js"></script>
+      <style type="text/css">
+        .icon {
+           width: 1em; height: 1em;
+           vertical-align: -0.15em;
+           fill: currentColor;
+           overflow: hidden;
+        }
+    </style>
   </head>
   <body>
-    <div class="topNavBar clearfix">                                 
-      <a class="logo" href="#" alt="logo" style="float: left">
-        <span class="rs">RS</span><span class="card">card</span>
-      </a>
-      <nav style="float: right">
-        <ul class="clearfix">
-          <li>
-            <a href="#">关于</a>
-          </li>     
-          <li>
-            <a href="#">技能</a>
-          </li>
-          <li>
-            <a href="#">作品</a>
-          </li>    
-          <li>
-          <a href="#">博客</a>
-        </li> 
-          <li>
-            <a href="#">日历</a>
-          </li>    
-          <li>
-            <a href="#">联系方式</a>
-          </li>
-          <li>
-            <a href="#">其他</a>
-          </li>
-        </ul>
-      </nav>
+    <div class="topNavBar">
+      <div class="topNavBar-inner clearfix">
+          <a class="logo" href="#" alt="logo" style="float: left">
+              <span class="rs">RS</span><span class="card">card</span>
+            </a>
+            <nav style="float: right">
+              <ul class="clearfix">
+                <li>
+                  <a href="#">关于</a>
+                </li>     
+                <li>
+                  <a href="#">技能</a>
+                </li>
+                <li>
+                  <a href="#">作品</a>
+                </li>    
+                <li>
+                <a href="#">博客</a>
+              </li> 
+                <li>
+                  <a href="#">日历</a>
+                </li>    
+                <li>
+                  <a href="#">联系方式</a>
+                </li>
+                <li>
+                  <a href="#">其他</a>
+                </li>
+              </ul>
+            </nav>
+        </div>
+     </div>                              
+    
+    <div class="banner" style="background-image: url(./rs-cover.jpg)">
+      <div class="mask"></div>
     </div>
-    <div class="banner" style="background-image: url(#)"></div>
     <main>
-      <div class="xx">
-        <div class="pictures">
-          <img src="#" alt="头像"/>          
-        </div> 
+      <div class="Usercard">
+        <div class="picturesandtexts clearfix">
+          <div class="pictures">
+          <img src="./avatar.jpg" alt="头像"/>          
+          </div> 
       
-        <div class="text">
-          <div class="profile"> 
-            <span class="welcome">Hello</span>
+          <div class="text"> 
+            <span class="welcome">Hello
+              <span class="triangle"></span>
+            </span>
             <h1>njwl</h1>
             <p>前端开发工程师</p>
             <hr>
             <dl>
               <dt>年龄</dt>
               <dd>23</dd>
+              <dt>所在城市</dt>
+              <dd>bj</dd>
+              <dt>邮箱</dt>
+              <dd>xxxxxxxxx@163.com</dd>
             </dl>
           </div>
+         </div>
           <footer class="media">
-            <a href="#"><img src="#" alt=".."></a>
-            <a href="#"><img src="#" alt=".."></a>
-            <a href="#"><img src="#" alt=".."></a>
-            <a href="#"><img src="#" alt=".."></a>
-            <a href="#"><img src="#" alt=".."></a>
-            <a href="#"><img src="#" alt=".."></a>
-            <a href="#"><img src="#" alt=".."></a>
+            <a href="#"><svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-github"></use>
+          </svg></a>
+            <a href="#"><svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-weibo"></use>
+          </svg></a>
+            <a href="#"><svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-ins"></use>
+          </svg></a>
           </footer>
-        </div>
-      </div>
+       </div>
     <a class="button" href="#">下载简历</a>  
     <p>哈哈哈</p>
   </main>
