--- a/test/index.html
+++ b/test/index.html
@@ -51,7 +51,7 @@
     <div class="banner" style="background-image: url(./rs-cover.jpg)">
       <div class="mask"></div>
     </div>
-    <main>
+    <main style="margin-top: -330px;">
       <div class="Usercard">
         <div class="picturesandtexts clearfix">
           <div class="pictures">
@@ -87,32 +87,85 @@
           </svg></a>
           </footer>
        </div>
-    <a class="button" href="#">下载简历</a>  
-    <p>哈哈哈</p>
+    <p class=downloadresumewrapper>
+      <a class="downloadresume" href="#" target="_blank">下载简历</a>  
+    </p>
+    <p class="selfintroduction">njwl,前端工程师。</p>
   </main>
-  <section>
+  <section class="skills">
     <h2>技能</h2>
-    <ol>
-      <li>html5 & css</li>
-      <lijavascript></li>
-      <li>jQuery</li>
-      <li>vue</li>
-      <li>react</li>
+    <ol class="clearfix">
+      <li>
+        <h3>html5 & css</h3>
+        <div class="progressbar">
+          <div class="progress"></div>
+        </div>
+      </li>
+      <li>
+          <h3>Javascript</h3>
+          <div class="progressbar">
+            <div class="progress"></div>
+          </div>
+        </li>
+        <li>
+            <h3>jQuery</h3>
+            <div class="progressbar">
+              <div class="progress"></div>
+            </div>
+          </li>
+          <li>
+              <h3>vue.js</h3>
+              <div class="progressbar">
+                <div class="progress"></div>
+              </div>
+            </li>
+            <li>
+                <h3>react.js</h3>
+                <div class="progressbar">
+                  <div class="progress"></div>
+                </div>
+              </li>
+              <li>
+                  <h3>node.js</h3>
+                  <div class="progressbar">
+                    <div class="progress"></div>
+                  </div>
+                </li>
     </ol>
   </section>
-  <section>
+  <section class="portfolio">
     <h2>作品集合</h2>
     <nav>
-      <ol>
-        <li>所有</li>
-        <li>框架</li>
-        <li>原生js</li>
+      <ol class="clearfix">
+         <li id="portfolioall">所有</li>
+         <li id="portfolioframework">框架</li>
+         <li id="portfoliovallina">原生js</li>
       </ol>
+      <div id="portfoliobar" class="bar state-1">
+        <div class="bar-inner"></div>
+      </div>
     </nav>
-    <div class="jobs">
-      <div class="big"></div>
-      <div class="small"></div>
-      <div class="small"></div> 
+    <script>
+      portfolioall.onclick= function(){
+        portfoliobar.className = 'bar state-1'
+      }
+      portfolioframework.onclick= function(){
+        portfoliobar.className = 'bar state-2'
+      }
+      portfoliovallina.onclick= function(){
+        portfoliobar.className = 'bar state-3'
+      }
+      </script>
+    <div class="works" style="height:597px;">
+      <div class="big" style="top:0;left:0;">
+        <img src="./1.jpg">
+      </div>
+      <div class="small" style="top:0; left:645px;">
+        <img src="./2.jpg">
+      </div>
+      <div class="small" style="top:311px; left:645px;">
+        <img src="./3.jpg">
+      </div> 
     </div>
   </section>
   </body>
